fixed log in buttons squishing if the viewport gets smalls

--- a/client/assets/css/index.css
+++ b/client/assets/css/index.css
@@ -116,24 +116,23 @@ h1{
 }
 
 .sign, .log{
-  margin: auto;
-  width: 30%;
-  height: 30%;
-  margin-top: 15%;
-  font-family: walpergens;
+    margin: auto;
+    width: 30%;
+    height: 30%;
+    margin-top: 15%;
+    font-family: walpergens;
 }
 
 button{
-  cursor: pointer;
-  height: 20%;
-  width: 25%;
-  font-size: 100%;
-  border: 2px white solid;
-  font-family: walpergens;
-  color: white;
-  font-size: 135%;
-  background: black;
-  vertical-align: top;
+    font-family: walpergens;
+    color: white;
+    background: black;
+    vertical-align: top;
+    cursor: pointer;
+    height: 11vmin;
+    width: 25%;
+    font-size: 100%;
+    border: 2px white solid;
 }
 
 .hide{
